--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.2",
+    "inngest": "^3.34.1",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
