--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "inngest-cli": "^1.5.5",
     "postcss": "^8",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1"
