--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@uiw/react-md-editor": "^4.0.5",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -49,6 +51,7 @@
     "react-spinners": "^0.15.0",
     "react-youtube": "^10.1.0",
     "recharts": "^2.15.0",
+    "serpapi": "^2.1.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
